gateway-node/kubo-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubo-gateway-service
  namespace: prod
spec:
  selector:
    app: kubo-gateway
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
