gateway-node/kubo-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubo-gateway-ingress
  namespace: prod
  labels:
    app: kubo-gateway
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # konghq.com/protocols: "https"
    # konghq.com/https-redirect-status-code: "301"
    konghq.com/strip-path: "true"
    konghq.com/request-buffering: "false"
    konghq.com/response-buffering: "false"
    # konghq.com/plugins: "kubo-gateway-guard-plugin,kubo-gateway-kubo-response-plugin,kubo-gateway-cors-plugin"
spec:
  ingressClassName: kong
  # tls:
  # - secretName: upload.lighthouse.storage
  #   hosts:
  #   - upload.lighthouse.storage
  rules:
    - host: upload.lighthouse.storage
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubo-gateway-service
                port:
                  number: 8080
